compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@method.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"impl Foo {\n            /// This is a doc comment\n            pub fn bar() -> void { }\n        }\")"
---
SOURCE_FILE@0..95
  IMPL@0..95
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..9
      PATH@5..9
        PATH_TYPE@5..9
          NAME@5..8
            IDENT@5..8 "Foo"
          WHITESPACE@8..9 " "
    LEFT_BRACE@9..10 "{"
    WHITESPACE@10..23 "\n            "
    METHOD@23..85
      DOC_COMMENT@23..48 "/// This is a doc com ..."
      WHITESPACE@48..61 "\n            "
      VISIBILITY@61..65
        PUB_KW@61..64 "pub"
        WHITESPACE@64..65 " "
      SIG@65..82
        FN_KW@65..67 "fn"
        WHITESPACE@67..68 " "
        NAME@68..71
          IDENT@68..71 "bar"
        PARAM_LIST@71..73
          LEFT_PAREN@71..72 "("
          RIGHT_PAREN@72..73 ")"
        WHITESPACE@73..74 " "
        RETURN_TYPE@74..82
          ARROW@74..76 "->"
          WHITESPACE@76..77 " "
          NAMED_TYPE@77..82
            PATH@77..82
              PATH_TYPE@77..82
                NAME@77..81
                  IDENT@77..81 "void"
                WHITESPACE@81..82 " "
      BLOCK@82..85
        LEFT_BRACE@82..83 "{"
        WHITESPACE@83..84 " "
        RIGHT_BRACE@84..85 "}"
    WHITESPACE@85..94 "\n        "
    RIGHT_BRACE@94..95 "}"
