compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@property.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"struct Foo {\n            /// This is a doc comment\n            pub bar: Int32 = 0;\n        }\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        7..10,
                    ),
                },
                builtin: false,
                properties: [
                    Property {
                        visibility: Public(
                            Public {
                                location: Location(
                                    63..66,
                                ),
                            },
                        ),
                        name: Identifier {
                            name: "bar",
                            location: Location(
                                67..70,
                            ),
                        },
                        property_type: Scalar(
                            ScalarType {
                                name: Path {
                                    root: [],
                                    name: PathSegment {
                                        name: Identifier {
                                            name: "Int32",
                                            location: Location(
                                                72..77,
                                            ),
                                        },
                                        type_arguments: [],
                                        location: Location(
                                            72..77,
                                        ),
                                    },
                                    location: Location(
                                        72..77,
                                    ),
                                },
                            },
                        ),
                        default_value: Some(
                            Literal(
                                Int(
                                    IntLiteral {
                                        value: 0,
                                        location: Location(
                                            80..81,
                                        ),
                                        kind: I32,
                                    },
                                ),
                            ),
                        ),
                        location: Location(
                            63..82,
                        ),
                        documentation: Some(
                            "This is a doc comment",
                        ),
                    },
                ],
                type_parameters: [],
                location: Location(
                    0..92,
                ),
                documentation: None,
            },
        ),
    ),
]
