compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@struct.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"/// This is a doc comment\n        struct Foo { }\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                visibility: Private(
                    Private {
                        location: Location(
                            34..34,
                        ),
                    },
                ),
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        41..44,
                    ),
                },
                builtin: false,
                properties: [],
                type_parameters: [],
                location: Location(
                    34..48,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
