compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@trait.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(r#\"/// This is a doc comment\n        trait Foo { }\"#)"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        40..43,
                    ),
                },
                type_parameters: [],
                methods: [],
                location: Location(
                    34..47,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
