compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@trait_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"trait Foo {\n            /// This is a doc comment\n            fn bar() -> void { }\n        }\")"
---
[
    TraitDefinition(
        TraitDefinition {
            attributes: [],
            visibility: None,
            name: Identifier {
                name: "Foo",
                location: Location(
                    6..9,
                ),
            },
            type_parameters: [],
            methods: [
                TraitMethodDefinition {
                    attributes: [],
                    signature: Signature {
                        external: false,
                        name: Identifier {
                            name: "bar",
                            location: Location(
                                65..68,
                            ),
                        },
                        type_parameters: [],
                        parameters: [],
                        return_type: Some(
                            Named(
                                NamedType {
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "void",
                                                location: Location(
                                                    74..78,
                                                ),
                                            },
                                            bound_types: [],
                                            location: Location(
                                                74..78,
                                            ),
                                        },
                                        location: Location(
                                            74..78,
                                        ),
                                    },
                                },
                            ),
                        ),
                        location: Location(
                            62..78,
                        ),
                    },
                    block: Some(
                        Block {
                            statements: [],
                            location: Location(
                                79..82,
                            ),
                        },
                    ),
                    location: Location(
                        62..82,
                    ),
                    documentation: Some(
                        "This is a doc comment",
                    ),
                },
            ],
            location: Location(
                0..92,
            ),
            documentation: None,
        },
    ),
]
