compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@type_alias.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(r#\"/// This is a doc comment\n        type Foo = Bar\"#)"
---
[
    TypeDefinition(
        Alias(
            AliasDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        39..42,
                    ),
                },
                definition: Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "Bar",
                                location: Location(
                                    45..48,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                45..48,
                            ),
                        },
                    },
                ),
                location: Location(
                    34..48,
                ),
                documentation: Some(
                    "This is a doc comment",
                ),
            },
        ),
    ),
]
