compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@trailing_comma.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Foo { Bar, Baz, }\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                visibility: Private {
                    location: Location(
                        0..0,
                    ),
                },
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                type_parameters: [],
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                11..14,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            11..14,
                        ),
                        documentation: None,
                    },
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Baz",
                            location: Location(
                                16..19,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            16..19,
                        ),
                        documentation: None,
                    },
                ],
                location: Location(
                    0..22,
                ),
                documentation: None,
            },
        ),
    ),
]
