compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@variant_param_empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(r#\"\n        enum Foo {\n            Bar()\n        }\"#)"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        14..17,
                    ),
                },
                cases: [
                    EnumDefinitionCase {
                        name: Identifier {
                            name: "Bar",
                            location: Location(
                                32..35,
                            ),
                        },
                        parameters: [],
                        location: Location(
                            32..37,
                        ),
                        documentation: None,
                    },
                ],
                location: Location(
                    9..47,
                ),
                documentation: None,
            },
        ),
    ),
]
